# integration-server

./: .gitignore  Execute.hs  Executor.hs  Makefile  ProjectConfig.hs  Types.hs  Yaml.hs  cabal.yaml  ghc-output.txt  make.yaml  notify-test.hs  parser-test.hs  popcon-server.yaml  ssh-test.hs  this-install-db.hs  this.cabal  this.hs
THIS/: ConnectionsManager.hs  Database.hs  Execute.hs  Hypervisor.hs  Notify.hs  Parse.hs  Protocols.hs  Templates.hs  Types.hs  Util.hs  Yaml.hs
THIS/Config/: Executor.hs  Global.hs  Parser.hs  ProjectConfig.hs
THIS/Database/: Entities.hs  Types.hs  Util.hs
THIS/Protocols/: All.hs  LibSSH2.hs  Local.hs  Manager.hs  Parse.hs  SSHCommands.hs  Types.hs
THIS/Templates/: Text.hs  XML.hs
examples/: config.yaml
examples/executors/: cabal-dev-install.yaml  cabal-install-from-git.yaml  cabal.yaml  make.yaml  null.yaml  raw.yaml
examples/parsers/: all-ok.yaml  cabal.yaml  ghc.yaml
examples/projects/: cabal-project.yaml  popcon-server.yaml  popcon.yaml  test.yaml  this.yaml
examples/templates/: nginx.site.conf  template.xml
