Name:                this
Version:             0.1

Synopsis:            THe Integration Server

Description:         THIS (THe Integration Server) performs building,
                     unit/integration tests runs, deployment and so on.

Homepage:            http://redmine.iportnov.ru/projects/integration-server

License:             LGPL-3

License-file:        LICENSE

Author:              IlyaPortnov

Maintainer:          portnov84@rambler.ru

-- A copyright notice.
-- Copyright:           

Category:            Development

Build-type:          Simple

Extra-source-files:  Makefile

Cabal-version:       >=1.6


Library
  Exposed-modules:     THIS.Database
                       THIS.Templates
                       THIS.Templates.XML
                       THIS.Templates.Text
                       THIS.Database.Types
                       THIS.Database.Util
                       THIS.Database.Entities
                       THIS.Protocols
                       THIS.Protocols.Types
                       THIS.Protocols.Parse
                       THIS.Protocols.SSHCommands
                       THIS.Protocols.Manager
                       THIS.Protocols.Local
                       THIS.Protocols.LibSSH2
                       THIS.Hypervisor
                       THIS.Types
                       THIS.Parse
                       THIS.Yaml
                       THIS.Execute
                       THIS.Util
                       THIS.Notify
                       THIS.Config.Parser
                       THIS.Config.ProjectConfig
                       THIS.Config.Executor
                       THIS.Config.Global
  
  Build-depends:       base >= 4 && <5, stm, mtl,
                       containers >= 0.4.1.0,
                       random >= 1.0.0.3,
                       time, text >= 0.11.1.5,
                       bytestring >= 0.9.2.0,
                       utf8-string >= 0.3.7,
                       regex-pcre >= 0.94.2,
                       network >= 2.3.0.5,
                       process >= 1.1,
                       syb >= 0.3.3,
                       parsec >= 3.1.1,
                       directory >= 1.1,
                       filepath >= 1.2,
                       Glob >= 0.6.1,
                       failure >= 0.1.0.1,
                       hxt >= 9.2.0,
                       data-object >= 0.3.1,
                       data-object-yaml >= 0.3.3.5,
                       conduit >= 0.2.0,
                       persistent >= 0.7.0.1,
                       persistent-template >= 0.7,
                       persistent-postgresql >= 0.7,
                       libssh2, libssh2-conduit,
                       libvirt-hs
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
Executable  this
  Main-is:  this.hs

Source-Repository head
  Type: git
  Location: git://home.iportnov.ru/integration-server.git

